; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_nfsd4_set_ex_flags.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_nfsd4_set_ex_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_client = type { i32 }
%struct.nfsd4_exchange_id = type { i32 }

@EXCHGID4_FLAG_USE_NON_PNFS = common dso_local global i32 0, align 4
@EXCHGID4_FLAG_SUPP_MOVED_REFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs4_client*, %struct.nfsd4_exchange_id*)* @nfsd4_set_ex_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfsd4_set_ex_flags(%struct.nfs4_client* %0, %struct.nfsd4_exchange_id* %1) #0 {
  %3 = alloca %struct.nfs4_client*, align 8
  %4 = alloca %struct.nfsd4_exchange_id*, align 8
  store %struct.nfs4_client* %0, %struct.nfs4_client** %3, align 8
  store %struct.nfsd4_exchange_id* %1, %struct.nfsd4_exchange_id** %4, align 8
  %5 = load i32, i32* @EXCHGID4_FLAG_USE_NON_PNFS, align 4
  %6 = load %struct.nfs4_client*, %struct.nfs4_client** %3, align 8
  %7 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* @EXCHGID4_FLAG_SUPP_MOVED_REFER, align 4
  %11 = load %struct.nfs4_client*, %struct.nfs4_client** %3, align 8
  %12 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load %struct.nfs4_client*, %struct.nfs4_client** %3, align 8
  %16 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.nfsd4_exchange_id*, %struct.nfsd4_exchange_id** %4, align 8
  %19 = getelementptr inbounds %struct.nfsd4_exchange_id, %struct.nfsd4_exchange_id* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
